Finalização do projeto

--- a/elevador/Elevador.csproj
+++ b/elevador/Elevador.csproj
@@ -7,10 +7,11 @@
     <ProjectGuid>{039A7FA3-4CAA-4F58-BEB8-0A3CCF48A0BF}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Elevador</RootNamespace>
-    <AssemblyName>Elevador</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
+    <RootNamespace>Teste.Elevador</RootNamespace>
+    <AssemblyName>Teste.Elevador</AssemblyName>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
